[package]
name = "pallet-trading-credit"
version = "0.1.0"
description = "信用风控模块 - Credit Risk Control Pallet (原 pallet-credit)"
authors = ["StarDust Team"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/memoio/stardust"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
log = { workspace = true }

# 依赖其他pallet
pallet-timestamp = { workspace = true }
pallet-trading-common = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"log/std",
	"pallet-timestamp/std",
	"pallet-trading-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]

