[package]
name = "pallet-trading-maker"
version = "0.1.0"
description = "做市商管理模块 - Maker Management Pallet"
authors = ["StarDust Team"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/memoio/stardust"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Substrate 核心依赖
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp = { workspace = true }

# 项目内部依赖
pallet-trading-credit = { path = "../credit", default-features = false }
pallet-trading-common = { path = "../common", default-features = false }
pallet-storage-service = { path = "../../storage-service", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "pallet-trading-credit/std",
    "pallet-trading-common/std",
    "pallet-storage-service/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
